Update landing page title

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <title>Todo List Application</title>
+    <title>Todo List Application - Landing Page</title>
 </head>
 <body>
     <div class="landing-page">
-        <h1>Welcome to the Modern Todo List App</h1>
+        <h1>Welcome to the Todo List App</h1>
         <p>Stay organized and productive with our user-friendly to-do list app</p>
         <a href="login.html" class="btn">Get Started</a>
     </div>
